# pipask

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  run-checks.sh
.github/workflows/: integration-tests.yaml  release.yaml  repo-scan.yaml  tests.yaml
src/pipask/: __init__.py  cli_args.py  cli_helpers.py  code_execution_guard.py  exception.py  main.py  report.py  utils.py
src/pipask/_vendor/pip/_internal/: build_env.py  configuration.py  exceptions.py
src/pipask/_vendor/pip/_internal/cli/: base_command.py  cmdoptions.py  req_command.py
src/pipask/_vendor/pip/_internal/commands/: install.py
src/pipask/_vendor/pip/_internal/distributions/: __init__.py  sdist.py
src/pipask/_vendor/pip/_internal/index/: package_finder.py
src/pipask/_vendor/pip/_internal/locations/: __init__.py  _distutils.py  _sysconfig.py  base.py
src/pipask/_vendor/pip/_internal/metadata/: __init__.py  base.py  pkg_resources.py
src/pipask/_vendor/pip/_internal/metadata/importlib/: _dists.py  _envs.py
src/pipask/_vendor/pip/_internal/models/: link.py
src/pipask/_vendor/pip/_internal/network/: session.py
src/pipask/_vendor/pip/_internal/operations/: check.py  prepare.py
src/pipask/_vendor/pip/_internal/req/: req_install.py  req_set.py  req_uninstall.py
src/pipask/_vendor/pip/_internal/resolution/legacy/: resolver.py
src/pipask/_vendor/pip/_internal/resolution/resolvelib/: base.py  candidates.py
src/pipask/_vendor/pip/_internal/utils/: misc.py
src/pipask/_vendor/pip/_vendor/pkg_resources/: __init__.py
src/pipask/checks/: base_checker.py  checks_executor.py  license.py  package_age.py  package_downloads.py  release_metadata.py  repo_popularity.py  types.py  vulnerabilities.py
src/pipask/infra/: executables.py  metadata.py  pip.py  pip_report.py  pypi.py  sys_values.py  vulnerability_details.py
src/pipc/: __init__.py  cli.py  cli_helpers.py  exception.py  main.py  report.py
src/pipc/checks/: repo_popularity.py  types.py
src/pipc/infra/: pip.py  pypi.py  repo_client.py
src/pipc/installers/: pip.py
tests/: conftest.py  test_main.py  test_utils.py
tests/checks/: test_license.py  test_package_age.py  test_package_downloads.py  test_release_metadata.py  test_repo_popularity.py  test_vulnerabilities.py
tests/infra/: test_metadata.py  test_pip.py  test_pypi.py  test_pypistats.py  test_repo_client.py  test_sys_values.py  test_vulnerability_details.py
tests/infra/data/: pyfluent_iterables-2.0.1-py3-none-any.whl
tests/infra/data/test-package/: setup.py
